--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Civic Tech Waterloo Region
 email: civictechwr@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Civic Tech Waterloo Region is a community group that brings together people from different sectors and industries to actively solve issues facing our local community using technology-based solutions.
-baseurl: "/ctwr_website" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: civictechwr
 github_username:  CivicTechWR
