CAFKA not KAFKA

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -68,7 +68,7 @@
   role: Speaker
   logo: assets/images/logos/kpl.png
 
-- name: KAFKA - Marie Clair Leblanc Flannigan
+- name: CAFKA - Marie Clair Leblanc Flannigan
   year: 2018
   role: Speaker
   logo: assets/images/logos/marie-clair.jpg
